--- a/source/css/_weiss__config.scss
+++ b/source/css/_weiss__config.scss
@@ -19,7 +19,7 @@ $futura: "FuturaMediumRegular", Futura, "URW Gothic L", Arial, FreeSans, sans-se
 $mainBgColor: #fff;
 $mainFgColor: #ccc;
 $baseColor: #434343;
-$accentColor: #000;
+$accentColor: #078e89;
 $lnColor: #09f;
 $lnHoverColor: lighten($lnColor, 15%);
 $containerWidth: 974px;
@@ -39,12 +39,12 @@ $base-line-height: 18px; // This line-height determines the basic unit of vertic
 // http://www.modularscale.com by Tim Brown
 // https://github.com/scottkellum/modular-scale by scottkellum
 
-$h1-font-size: 1.942 * $base-font-size;
-$h2-font-size: 1.618 * $base-font-size;
-$h3-font-size: 1.201 * $base-font-size;
-$h4-font-size: 1 * $base-font-size;
-$h5-font-size: 0.742 * $base-font-size;
-$h6-font-size: 0.618 * $base-font-size;
+$h1-font-size: 2.429 * $base-font-size;
+$h2-font-size: 2.25 * $base-font-size;
+$h3-font-size: 1.619 * $base-font-size;
+$h4-font-size: 1.5 * $base-font-size;
+$h5-font-size: 1.079 * $base-font-size;
+$h6-font-size: 1 * $base-font-size;
 
 // ============================================================================
 //    Sprites
@@ -57,11 +57,12 @@ $h6-font-size: 0.618 * $base-font-size;
 //    Non-semantic grid support
 //=============================================================================
 
-//@import "susy";
-//$total-columns: 12;
-//$column-width: 4em;
-//$gutter-width: 1em;
-//$grid-padding: $gutter-width;
+@import "susy";
+
+$total-columns: 12;
+$column-width: 4em;
+$gutter-width: 1em;
+$grid-padding: $gutter-width;
 
 $gw-column: 4em; // Column Width
 $gw-gutter: 1em; // Gutter Width
