--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -2,11 +2,11 @@
 
 /* ============================================================================
 
-__  __  __    _
-\ \/  \/ /__ (_) __  __                /\
- \  /\  / -_)| |(__ (__            /\ /  \/\
-  \/  \/\___||_| __) __) css helper    /\/\ \
-        http://dimanech.github.com/weiss/  \ \
+|__  __  __    _
+|\ \/  \/ /__ (_) __  __                /\
+| \  /\  / -_)| |(__ (__            /\ /  \/\
+|  \/  \/\___||_| __) __) css helper    /\/\ \
+|        http://dimanech.github.com/weiss/  \ \
 
 
 The MIT License (MIT)
