--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,562 +1,17 @@
 ---
-title: Стили
+title: Styles test page
 
 asideBlocks:
 - partials/aside-block__nav
 
 ---
 
-<img src="images/example/content-example-img.png" alt="Weiss ver 3.0 St. Bernard" style="margin-bottom: 1em;max-width: 100%;height: auto;" />
-<h1>Заголовок 1</h1>
-<p>
-	Альпы (фр. Alpes, нем. Alpen, итал. Alpi, словен. Alpe) — наиболее высокая горная система Западной
-	Европы. В пределах географических границ Альп полностью или частично находятся территории 8 стран;
-	по доле общей площади государства, приходящейся на Альпы, эти страны располагаются следующим
-	образом: Лихтенштейн (100%), Монако (100%), Австрия (65%), Швейцария (60%), Словения (40%), Италия
-	(17%), Франция (7%), Германия (3%).
-</p>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<p>
-	Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
-	осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
-	(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
-	и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
-	крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
-	и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
-	молассовые формации Предальп со среднегорным и низкогорным рельефом.
-</p>
-<p>
-	A common form of lorem ipsum text reads as follows:
-</p>
-<figure>
-	<blockquote>
-		<p>
-			Lorem ipsum dolor sit amet, <q>текст заключенный в ковычки</q> consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut
-			labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-			voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-			non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</blockquote>
-	<figcaption>
-		<p>
-			Цитируется по:<cite>http://www.wikipedia.org</cite>
-		</p>
-	</figcaption>
-</figure>
-<p>
-	Many variations on the standard lorem ipsum text exist; some with little resemblance to the
-	original. There are versions that have additional letters — such as k, w, and z — that were uncommon
-	or missing in the Latin language; these were added to achieve a distribution of letters that more
-	closely approximates English.
-</p>
-<hr>
-<ol>
-	<li>
-		<a href="example.com">A Link</a> | <a href="http://google.com">Link	visited</a>
-	</li>
-	<li>
-		<del>Deleted</del>
-		|
-		<ins>Inserted</ins>
-	</li>
-</ol>
-<ul>
-	<li>
-		an <a href="#">anchor</a> tag (
-		<code>
-			&lt;a&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		an <i>italics</i> and <em>emphasize</em> tag (
-		<code>
-			&lt;i&gt;
-		</code>
-		,
-		<code>
-			&lt;em&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		a <b>bold</b> and <strong>strong</strong> tag (
-		<code>
-			&lt;b&gt;
-		</code>
-		,
-		<code>
-			&lt;strong&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		an <abbr>abbreviation</abbr> tag (
-		<code>
-			&lt;abbr&gt;
-		</code>)
-		example
-	</li>
-	<li>
-		a <cite>cite</cite> and <q>quote</q> tag (
-		<code>
-			&lt;cite&gt;
-		</code>
-		,
-		<code>
-			&lt;q&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		a
-		<code>
-			code
-		</code>
-		and <dfn>definition</dfn> tag (
-		<code>
-			&lt;code&gt;
-		</code>
-		,
-		<code>
-			&lt;dfn&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		a <tt>teletype</tt> and <kbd>keyboard</kbd> tag (
-		<code>
-			&lt;tt&gt;
-		</code>
-		,
-		<code>
-			&lt;kbd&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		a <var>variable</var> and <samp>sample</samp> tag (
-		<code>
-			&lt;var&gt;
-		</code>
-		,
-		<code>
-			&lt;samp&gt;
-		</code>
-		) example
-	</li>
-	<li>
-		a <sub>subscript</sub> and <sup>superscript</sup> tag (
-		<code>
-			&lt;sub&gt;
-		</code>
-		,
-		<code>
-			&lt;sup&gt;
-		</code>)
-		example
-	</li>
-	<li>
-		a
-		<mark>
-			mark
-		</mark>
-		tag (HTML5) (
-		<code>
-			&lt;mark&gt;
-		</code>
-		) example
-	</li>
-</ul>
-<ul>
-	<li>
-
-		<strong>Strong</strong> | <b>Bold</b>
-	</li>
-	<li>
-		<em>Emphasis</em> | <i>Italic</i>
-		<ul>
-			<li>
-				Вложенность списка
-				<mark>
-					Mark text
-				</mark>
-			</li>
-		</ul>
-	</li>
-</ul>
-
-<hr />
-<h2>List test</h2>
-<ol>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-		<ol>
-			<li>
-				list item 2
-			</li>
-			<li>
-				list item 2
-				<ol>
-					<li>
-						list item 3
-					</li>
-					<li>
-						list item 3
-					</li>
-				</ol>
-			</li>
-			<li>
-				list item 2
-			</li>
-			<li>
-				list item 2
-			</li>
-		</ol>
-	</li>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-	</li>
-</ol>
-<ul>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-		<ul>
-			<li>
-				list item 2
-			</li>
-			<li>
-				list item 2
-				<ul>
-					<li>
-						list item 3
-					</li>
-					<li>
-						list item 3
-					</li>
-				</ul>
-			</li>
-			<li>
-				list item 2
-			</li>
-			<li>
-				list item 2
-			</li>
-		</ul>
-	</li>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-	</li>
-</ul>
-<ul>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-		<ol>
-			<li>
-				ordered list item 2
-			</li>
-			<li>
-				list item 2
-				<ul>
-					<li>
-						list item 3
-					</li>
-					<li>
-						list item 3
-					</li>
-				</ul>
-			</li>
-			<li>
-				list item 2
-			</li>
-			<li>
-				list item 2
-			</li>
-		</ol>
-	</li>
-	<li>
-		list item 1
-	</li>
-	<li>
-		list item 1
-	</li>
-</ul>
-
-<table class="table" itemscope itemtype="http://schema.org/Table">
-	<caption itemprop="about">
-		Таблица: Jimi Hendrix - альбомы
-	</caption>
-	<thead>
-		<tr>
-			<th>Lorem</th>
-			<th>Ipsum</th>
-			<th>Dolor</th>
-			<th>Sit</th>
-			<th>Amet</th>
-		</tr>
-	</thead>
-	<tfoot>
-		<tr>
-			<td>Lorem</td>
-			<td>Ipsum</td>
-			<td>Dolor</td>
-			<td>Sit</td>
-			<td>Amet</td>
-		</tr>
-	</tfoot>
-	<tbody>
-		<tr>
-			<td>Amet</td>
-			<td>Sit</td>
-			<td>Dolor</td>
-			<td>Ipsum</td>
-			<td>Lorem</td>
-		</tr>
-		<tr>
-			<td rowspan="2">Amet</td>
-			<td colspan="2">Sit</td>
-			<td>Ipsum</td>
-			<td>Lorem</td>
-		</tr>
-		<tr>
-			<td>Sit</td>
-			<td>Dolor</td>
-			<td>Ipsum</td>
-			<td>Lorem</td>
-		</tr>
-	</tbody>
-</table>
-<hr>
-<pre>
-And some fixed width text.
-As a matter of fact, this is a bit of Evernote Readable's own code.
-
-var _coverElement = document.createElement('div');
-_coverElement.setAttribute('id', 'readable_cover');
-_coverElement.setAttribute('style', 'display: none');
-
-_body.appendChild(_coverElement);
-						</pre>
-<hr>
-<dl>
-	<dt>
-		Term
-	</dt>
-	<dd>
-		term definition
-	</dd>
-	<dt>
-		Тяжёлая вода
-	</dt>
-	<dd>
-		&mdash; (также <abbr title="оксид дейтерия">OD</abbr>) D<sub>2</sub>O или <sup>2</sup>H<sub>2</sub>O. - имеет
-		плотность 1104,2 кг/м<sup>3</sup>, жидкость.
-	</dd>
-</dl>
-<p>
-	<dfn>Определение в тексте</dfn> Для быстрого закрашивания выделенной области цветом переднего плана используйте
-	комбинацию клавиш <kbd>&lt;Alt&gt;+&lt;Backspace&gt;
-	(Kdb)</kbd> или <kbd>&lt;Alt&gt;+&lt;Delete&gt;</kbd>. Для закрашивания выделенной области фоновым цветом
-	воспользуйтесь комбинацией <kbd>&lt;Ctrl&gt;+&lt;Backspace&gt;</kbd> или <kbd>&lt;Ctrl&gt;+&lt;Delete&gt;</kbd>.
-</p>
-<hr/>
-<h1>Уровень 01 Заголовок</h1>
-<h2>Уровень 02 Заголовок</h2>
-<h3>Уровень 03 Заголовок</h3>
-<h4>Уровень 04 Заголовок</h4>
-<h5>Уровень 05 Заголовок</h5>
-<h6>Уровень 06 Заголовок</h6>
-<hr/>
-<h1>Уровень 01 Заголовок <br /> заголовок в 2 строки</h1>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h2>Уровень 02 Заголовок <br /> заголовок в 2 строки</h2>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h3>Уровень 03 Заголовок <br /> заголовок в 2 строки</h3>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h4>Уровень 04 Заголовок <br /> заголовок в 2 строки</h4>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h5>Уровень 05 Заголовок <br /> заголовок в 2 строки </h5>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h6>Уровень 06 Заголовок <br /> заголовок в 2 строки</h6>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<hr/>
-<h1>Уровень 01 Заголовок</h1>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h2>Уровень 02 Заголовок</h2>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h3>Уровень 03 Заголовок</h3>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h4>Уровень 04 Заголовок</h4>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h5>Уровень 05 Заголовок</h5>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-<h6>Уровень 06 Заголовок</h6>
-<p>
-	Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-	моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-	Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-	высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-	(высота до 4 049 м, гора Бернина).
-</p>
-
-<hr />
-
-<form class="form form_custom form_name2" action="form" method="get" accept-charset="utf-8">
-	<fieldset class="form__set form__set_main">
-		<legend class="form__set__legend form__set__legend_main">
-			<span>Feedback - inline form</span>
-		</legend>
-		<fieldset class="form__set">
-			<legend class="i-wai">
-				Personal data
-			</legend>
-			<div class="form__row">
-				<div class="form__item form__item_w-100">
-					<label for="form_name2-name">User name</label>
-				</div>
-				<div class="form__item form__item_w-200">
-					<input type="text" id="form_name2-name" name="form_name2-name" />
-				</div>
-			</div>
-			<div class="form__row">
-				<div class="form__item form__item_w-100">
-					<label for="form_name2-mail">User mail</label>
-				</div>
-				<div class="form__item form__item_w-200">
-					<input type="text" id="form_name2-mail" name="form_name2-mail" />
-				</div>
-			</div>
-			<div class="form__row">
-				<div class="form__item form__item_w-100">
-					<label for="form_name2-tel-tel">User tel</label>
-				</div>
-				<div class="form__item form__item_w-50">
-					<input type="text" id="form_name2-tel-code" name="form_name2-tel-code" />
-				</div>
-				<div class="form__item form__item_w-140">
-					<input type="text" id="form_name2-tel-tel" name="form_name-tel-tel" />
-				</div>
-			</div>
-		</fieldset>
-		<fieldset class="form__set">
-			<legend class="form__set__legend">
-				<span>Message</span>
-			</legend>
-			<div class="form__row">
-				<div class="form__item form__item_w-100">
-					<label for="form_name2-theme">Message theme</label>
-				</div>
-				<div class="form__item form__item_w-200">
-					<select id="form_name2-theme" name="form_name2-theme">
-						<option selected="selected" value="sm1">Выбор 1</option>
-						<option value="sm2">Выбор 2</option>
-						<option value="sm3">Длинный длинный длинный выбор</option>
-						<option value="sm4">Выбор 4</option>
-						<option value="sm5">Выбор 5</option>
-						<option value="sm6">выбор 5</option>
-					</select>
-				</div>
-			</div>
-			<div class="form__row">
-				<div class="form__item form__item_w-100">
-					<label for="form_name2-comment">User comment</label>
-				</div>
-				<div class="form__item form__item_w-200">
-					<textarea id="form_name2-comment" name="form_name2-comment" rows="5"></textarea>
-				</div>
-			</div>
-		</fieldset>
-		<div class="form__row form__row_submit">
-			<input type="submit" id="form_name2-submit-btn" class="btn btn_medium btn_grey" value="Отправить" />
-		</div>
-	</fieldset>
-</form>
+<%#= partial "partials/additional/_typography-test" %>
+<%= partial "partials/additional/_block__forms" %>
+<%#= partial "partials/additional/_block__menu-horiz" %>
+<%#= partial "partials/additional/_block__pagination" %>
+<%#= partial "partials/additional/_block__collaps" %>
+<%#= partial "partials/additional/_block__tabs" %>
+<%#= partial "partials/additional/_block__modal" %>
+<%#= partial "partials/additional/_block__filter" %>
+<%#= partial "partials/additional/_block__btn" %>
