--- a/source/partials/_block__breadcrumbs.erb
+++ b/source/partials/_block__breadcrumbs.erb
@@ -2,7 +2,7 @@
 	<nav role="navigation">
 		<ol class="breadcrumb__inner">
 			<li class="breadcrumb__item">
-				<a href="#" itemprop="url" class="breadcrumb__ln"><span itemprop="title">Главная</span></a> →
+				<a href="#" itemprop="url" class="breadcrumb__ln"><span itemprop="title">Home</span></a> →
 			</li>
 			<li class="breadcrumb__item">
 				<%= data.page.title || 'Weiss - blank canvas framework' %>
