--- a/source/partials/_region__footer.erb
+++ b/source/partials/_region__footer.erb
@@ -5,14 +5,14 @@
 				<div class="l-span l-span_6">
 					<p>
 						Weiss <br />
-						&copy; 2013 blank canvas sass-css helper. ver 3.0
+						&copy; 2013 blank canvas sass-css helper. ver 3.1
 					</p>
 				</div>
 				<div class="l-row l-span_6 l-span_last">
 					<p class="develop-block">
 						Development
 						<a href="#" class="develop-block__logo">
-							<img src="images/bg-transparent.gif" alt="Интерактивное агенство Uplab" />
+							<img src="images/bg-transparent.gif" alt="Weiss" />
 						</a>
 					</p>
 				</div>
