--- a/source/partials/additional/_block__filter.erb
+++ b/source/partials/additional/_block__filter.erb
@@ -1,5 +1,12 @@
+<%#
+================================================================================
+	WEISS
+	Simple Filter
+================================================================================
+%>
+
 <dl class="nav nav_filter">
-	<dt class="nav__title">Фильтр:</dt>
+	<dt class="nav__title">Filter:</dt>
 	<dd class="nav__item">
 		<a href="#" class="js-filter-btn js-filter-btn_active" data-filter="*">all</a></dd>
 	<dd class="nav__item">
