--- a/source/partials/additional/_block__pagination.erb
+++ b/source/partials/additional/_block__pagination.erb
@@ -1,3 +1,10 @@
+<%#
+================================================================================
+	WEISS
+	Paginattion block
+================================================================================
+%>
+
 <div class="pages">
 	<nav>
 		<ul>
