--- a/source/partials/additional/_block__tabs.erb
+++ b/source/partials/additional/_block__tabs.erb
@@ -1,3 +1,10 @@
+<%#
+================================================================================
+	WEISS
+	Tab block
+================================================================================
+%>
+
 <div class="content-tabs" role="application">
 	<div class="content-tabs__nav js-tab-ln-wr">
 		<ul class="content-tabs__nav__inner" role="tablist">
@@ -7,39 +14,13 @@
 		</ul>
 	</div>
 	<div id="tab1" class="content-tabs__item js-tab-content" aria-labelledby="tab1-aria-label" role="tabpanel">
-		<p>
-			Альпы (фр. Alpes, нем. Alpen, итал. Alpi, словен. Alpe) — наиболее высокая горная система Западной
-			Европы. В пределах географических границ Альп полностью или частично находятся территории 8 стран;
-			по доле общей площади государства, приходящейся на Альпы, эти страны располагаются следующим
-			образом: Лихтенштейн (100%), Монако (100%), Австрия (65%), Швейцария (60%), Словения (40%), Италия
-			(17%), Франция (7%), Германия (3%).
-		</p>
-		<p>
-			Альпы (фр. Alpes, нем. Alpen, итал. Alpi, словен. Alpe) — наиболее высокая горная система Западной
-			Европы. В пределах географических границ Альп полностью или частично находятся территории 8 стран;
-			по доле общей площади государства, приходящейся на Альпы, эти страны располагаются следующим
-			образом: Лихтенштейн (100%), Монако (100%), Австрия (65%), Швейцария (60%), Словения (40%), Италия
-			(17%), Франция (7%), Германия (3%).
-		</p>
+		<p>The Alps are one of the great mountain range systems of Europe stretching approximately 1,200 kilometres (750 mi) across eight Alpine countries from Austria and Slovenia in the east, Switzerland, Liechtenstein, Germany, and France to the west, and Italy and Monaco to the south.[1] The mountains were formed over hundreds of millions of years as the African and Eurasian tectonic plates collided. Extreme shortening caused by the event resulted in marine sedimentary rocks rising by thrusting and folding into high mountain peaks such as Mont Blanc and the Matterhorn. Mont Blanc spans the French–Italian border, and at 4,810.45 m (15,782 ft) is the highest mountain in the Alps. The Alpine region area contains many peaks higher than 4,000 m (13,123 ft), known as the "four-thousanders".</p>
+		<p>The altitude and size of the range affects the climate in Europe; in the mountains precipitation levels vary greatly and climatic conditions consist of distinct zones. Wildlife such as ibex live in the higher peaks to elevations of 3,400 m (11,155 ft), and plants such as Edelweiss grow in rocky areas in lower elevations as well as in higher elevations. Evidence of human habitation in the Alps goes back to the Paleolithic era. A mummified man, determined to be 5,000 years old, was discovered on a glacier at the Austrian–Italian border in 1991. By the 6th century BC, the Celtic La Tène culture was well established. Hannibal famously crossed the Alps with a herd of elephants, and the Romans had settlements in the region. In 1800 Napoleon crossed one of the mountain passes with an army of 40,000. The 18th and 19th centuries saw an influx of naturalists, writers, and artists, in particular the Romantics, followed by the golden age of alpinism as mountaineers began to ascend the peaks. In World War II the Third Reich invaded the Alpine countries, with the exception of Switzerland and Liechtenstein; Adolf Hitler kept a base of operation in the Bavarian Alps throughout the war.</p>
 	</div>
 	<div id="tab2" class="content-tabs__item js-tab-content" aria-labelledby="tab2-aria-label" role="tabpanel">
-		<p>
-			Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
-			моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
-			Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
-			высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
-			(высота до 4 049 м, гора Бернина).
-		</p>
+		<p>The Alpine region has a strong cultural identity. The traditional culture of farming, cheesemaking, and woodworking still exists in Alpine villages, although the tourist industry began to grow early in the 20th century and expanded greatly after World War II to become the dominant industry by the end of the century. The Winter Olympic Games have been hosted in the Swiss, French, Italian, Austrian and German Alps. At present the region is home to 14 million people and has 120 million annual visitors.</p>
 	</div>
 	<div id="tab3" class="content-tabs__item js-tab-content" aria-labelledby="tab3-aria-label" role="tabpanel">
-		<p>
-			Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
-			осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
-			(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
-			и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
-			крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
-			и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
-			молассовые формации Предальп со среднегорным и низкогорным рельефом.
-		</p>
+		<p>The Alps are one of the great mountain range systems of Europe stretching approximately 1,200 kilometres (750 mi) across eight Alpine countries from Austria and Slovenia in the east, Switzerland, Liechtenstein, Germany, and France to the west, and Italy and Monaco to the south.[1] The mountains were formed over hundreds of millions of years as the African and Eurasian tectonic plates collided. Extreme shortening caused by the event resulted in marine sedimentary rocks rising by thrusting and folding into high mountain peaks such as Mont Blanc and the Matterhorn. Mont Blanc spans the French–Italian border, and at 4,810.45 m (15,782 ft) is the highest mountain in the Alps. The Alpine region area contains many peaks higher than 4,000 m (13,123 ft), known as the "four-thousanders".</p>
 	</div>
 </div>
