--- a/source/css/_block__btn.scss
+++ b/source/css/_block__btn.scss
@@ -7,58 +7,102 @@
 
 .btn {
 	display: inline-block;
+	margin: 0;
 	@include vendor(box-sizing, border-box);
-	vertical-align: top;
 	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: bold;
 	text-align: center;
 	border: none;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	cursor: default;
+	position: relative;
+	@include vendor(user-select, none);
 
 	.ie6-7 & {
 		display: inline;
 		zoom: 1;
+		padding: 0 !important;
 	}
 }
 
 /* @group Btn colors
   --------------------------------------------------------------------------- */
 
-.btn_grey {
-	color: $baseColor;
-	@include background(linear-gradient(#ffffff, #ebebeb));
-	border: 1px solid rgba(0,0,0,.25);
+@mixin button-colors($bg) {
+
+	$schemeLight: true;
+	@if lightness($bg) < lightness(#eee) {
+		$schemeLight: false;
+	}
+
+	background-color: $bg;
+	@include background(linear-gradient(top, $bg, darken($bg, 10%)));
+	border: 1px solid;
+	@if $schemeLight {
+		border-color: darken($bg, 18.5%) darken($bg, 29.5%) darken($bg, 40%);
+	} @else {
+		border-color: darken($bg, 10.5%) darken($bg, 21.5%) darken($bg, 35%);
+	}
 	border-radius: 3px;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.89);
+	text-shadow: 0 1px 1px rgba($bg, .75);
+	box-shadow: 0 1px 2px rgba(#000, .1);
+	@if $schemeLight {
+		color: $baseColor;
+	} @else {
+		color: #fff;
+	}
 
 	&:hover,
 	&:focus {
-		border-color: rgba(0,0,0,.35);
-		@include background(linear-gradient(bottom, #ffffff, #ebebeb));
-		box-shadow: 0 1px 0 rgba(255,255,255,0.89);
+		@if $schemeLight {
+			color: darken($baseColor, 5%);
+		} @else {
+			color: #fff;
+		}
+		background: darken($bg, 3%);
+		box-shadow: 0 1px 0 rgba(#000, .1);
+	}
+
+	&:active,
+	&:focus {
+		@if $schemeLight {
+			color: darken($baseColor, 5%);
+		} @else {
+			color: #fff;
+		}
+		background: darken($bg, 5%);
+		box-shadow: inset 0 2px 6px -2px darken($bg, 80%), 0 0 0 3px #EBE66F;
+	}
+
+	&:disabled {
+		cursor: default;
+		color: lighten($baseColor, 30%);
+		text-shadow: none;
+		box-shadow: none;
+		border: 1px solid darken($bg, 25%);
+		background: transparent;
+
+		&:active {
+			box-shadow: none;
+		}
 	}
 }
 
-a.btn_grey {
-	color: $baseColor;
+.btn_grey {
+	@include button-colors(#fff);
+}
+
+.btn_blue {
+	@include button-colors(#729fcf);
 }
 
 .btn_red {
-	color: #fff;
-	@include background(linear-gradient(#729fcf, #4c8ed2));
-	border: 1px solid rgba(#4c8ed2,.25);
-	border-radius: 3px;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.89);
-
-	&:hover,
-	&:focus {
-		background: lighten(#4c8ed2, 5%);
-		box-shadow: 0 1px 0 rgba(255,255,255,0.89);
-	}
+	@include button-colors(#B33D5D);
 }
 
-a.btn_red {
-	color: #fff;
+.btn_green {
+	@include button-colors(#51A351);
 }
 
 /* @end */
@@ -66,15 +110,54 @@ a.btn_red {
 /* @group Btn size
   --------------------------------------------------------------------------- */
 
-.btn_medium {
-	font-size: 14px;
-	height: 34px;
-	line-height: 44px;
-	padding: 0 13px;
+@mixin button-size($fz, $height, $padding, $width) {
+	font-size: $fz;
+	height: $height;
+	line-height: $height;
+	padding: 0 $padding;
+	min-width: $width;
 
 	.form & {
-		padding: 0 13px;
+		padding: 0 $padding;
 	}
+}
+
+.btn_small {
+	@include button-size(12px, 24px, 13px, 100px)
+}
+
+.btn_medium {
+	@include button-size(14px, 34px, 13px, 100px)
+}
+
+.btn_big {
+	@include button-size(16px, 48px, 13px, 100px)
+}
+
+.btn_huge {
+	@include button-size(18px, 56px, 13px, 100px)
+}
+
+/* @end */
+
+/* @group Btn width
+  --------------------------------------------------------------------------- */
+
+.btn_fullwidth {
+	width: 100%;
+}
+
+/* @end */
+
+/* @group Btn with ico
+  --------------------------------------------------------------------------- */
+
+.btn__ico {
+	vertical-align: middle;
+}
+
+.btn__inner {
+	margin: 0 10px;
 }
 
 /* @end */
