--- a/source/css/_html__typography__basic.scss
+++ b/source/css/_html__typography__basic.scss
@@ -13,6 +13,7 @@ h5, .h5,
 h6, .h6 {
 	margin: 0;
 	font-weight: bold;
+	font-family: $futura;
 }
 
 // working with design
@@ -53,27 +54,27 @@ h6, .h6 {
 //}
 
 h1, .h1 {
-	@include adjust-font-size-to($h1-font-size);
+	@include adjust-font-size-to($h1-font-size, 2.2);
 	@include trailer(1, $h1-font-size);
 }
 
 h2, .h2 {
-	@include adjust-font-size-to($h2-font-size);
+	@include adjust-font-size-to($h2-font-size, 2);
 	@include trailer(1, $h2-font-size);
 }
 
 h3, .h3 {
-	@include adjust-font-size-to($h3-font-size);
+	@include adjust-font-size-to($h3-font-size, 1.7);
 	@include trailer(1, $h3-font-size);
 }
 
 h4, .h4 {
-	@include adjust-font-size-to($h4-font-size);
+	@include adjust-font-size-to($h4-font-size, 1.5);
 	@include trailer(1, $h4-font-size);
 }
 
 h5, .h5 {
-	@include adjust-font-size-to($h5-font-size);
+	@include adjust-font-size-to($h5-font-size, 1.2);
 	@include trailer(1, $h5-font-size);
 }
 
