--- a/source/css/_html__typography__fonts.scss
+++ b/source/css/_html__typography__fonts.scss
@@ -5,12 +5,37 @@
 		Embed fonts
 ============================================================================= */
 
-@font-face {
-	font-family: 'ALSRublRegular';
-	src: url('../fonts/ASLRubl/rouble-webfont.eot');
-	src: url('../fonts/ASLRubl/rouble-webfont.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/ASLRubl/rouble-webfont.woff') format('woff'),
-	url('../fonts/ASLRubl/rouble-webfont.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
+// PT Sans
+
+//@font-face {
+//	font-family: 'pt-sans';
+//	src: url('../fonts/pt-sans/ptsans-regular-webfont.eot');
+//	src: url('../fonts/pt-sans/ptsans-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/pt-sans/ptsans-regular-webfont.woff') format('woff'), url('../fonts/pt-sans/ptsans-regular-webfont.ttf') format('truetype');
+//	font-weight: normal;
+//	font-style: normal;
+//}
+//
+//@font-face {
+//	font-family: 'pt-sans';
+//	src: url('../fonts/pt-sans/ptsans-italic-webfont.eot');
+//	src: url('../fonts/pt-sans/ptsans-italic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/pt-sans/ptsans-italic-webfont.woff') format('woff'), url('../fonts/pt-sans/ptsans-italic-webfont.ttf') format('truetype');
+//	font-weight: normal;
+//	font-style: italic;
+//}
+//
+//@font-face {
+//	font-family: 'pt-sans';
+//	src: url('../fonts/pt-sans/ptsans-bold-webfont.eot');
+//	src: url('../fonts/pt-sans/ptsans-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/pt-sans/ptsans-bold-webfont.woff') format('woff'), url('../fonts/pt-sans/ptsans-bold-webfont.ttf') format('truetype');
+//	font-weight: bold;
+//	font-style: normal;
+//}
+//
+//@font-face {
+//	font-family: 'pt-sans';
+//	src: url('../fonts/pt-sans/ptsans-bolditalic-webfont.eot');
+//	src: url('../fonts/pt-sans/ptsans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/pt-sans/ptsans-bolditalic-webfont.woff') format('woff'), url('../fonts/pt-sans/ptsans-bolditalic-webfont.ttf') format('truetype');
+//	font-weight: bold;
+//	font-style: italic;
+//}
+//
