--- a/source/css/_layout__non-semantic-grid.scss
+++ b/source/css/_layout__non-semantic-grid.scss
@@ -24,12 +24,12 @@
 	float: left;
 }
 
-@each $columns in 1, 2, 4, 6, 8, 10, 12 {
-	.l-span_#{$columns} {
-		width: grid-width($columns);
-		margin-right: $gw-gutter;
-	}
-}
+//@each $columns in 1, 2, 4, 6, 8, 10, 12 {
+//	.l-span_#{$columns} {
+//		width: grid-width($columns);
+//		margin-right: $gw-gutter;
+//	}
+//}
 
 /* Non-semantic grid support : Layout type */
 
@@ -47,3 +47,14 @@
 }
 
 /* @end */
+
+// @group Susy
+//  ---------------------------------------------------------------------------
+
+@each $columns in 1, 2, 4, 6, 8, 10, 12 {
+	.l-span_#{$columns} {
+		@include span-columns($columns,12);
+	}
+}
+
+// @end
