--- a/source/css/_parts__main.scss
+++ b/source/css/_parts__main.scss
@@ -8,28 +8,28 @@
 /* @group Global sprite
   --------------------------------------------------------------------------- */
 
+$icons-map: sprite-map("icons/*.png", $spacing: 30px, $layout: vertical);
 
-//$icons-map: sprite-map("icons/*.png", $spacing: 20px, $layout: vertical);
-//
-//.i-ico {
-//	background: $icons-map;
-//	display: inline-block;
-//	vertical-align: top;
-//
-//	.ie6-7 & {
-//		display: inline;
-//		zoom: 1;
-//	}
-//}
-//
-//@each $ico-name in
-//	search,
-//	tel
-//{
-//	.i-ico_#{$ico-name} {
-//		@include sprite($icons-map, ico-#{$ico-name}, true);
-//	}
-//}
+.i-ico {
+	background: $icons-map;
+	display: inline-block;
+	vertical-align: top;
+
+	.ie6-7 & {
+		display: inline;
+		zoom: 1;
+	}
+}
+
+@each $ico-name in
+	speech,
+	speech-white,
+	share-big
+{
+	.i-ico_#{$ico-name} {
+		@include sprite($icons-map, ico-#{$ico-name}, true);
+	}
+}
 
 //.i-ico_dimensions {
 //	@include sprite($icons-map, ico-file-doc, true);
