--- a/source/layouts/main.erb
+++ b/source/layouts/main.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!--[if IEMobile 7]>
-<html class="iem7 no-js" lang="ru" dir="ltr"><![endif]-->
+<html class="iem7 no-js" lang="en-US" dir="ltr"><![endif]-->
 <!--[if (lte IE 6)&(!IEMobile)]>
-<html class="ie6 ie6-7 ie6-8 no-js" lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie6 ie6-7 ie6-8 no-js" lang="en-US" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
 <!--[if (IE 7)&(!IEMobile)]>
-<html class="ie7 ie6-7 ie6-8 no-js" lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie7 ie6-7 ie6-8 no-js" lang="en-US" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
 <!--[if (IE 8)&(!IEMobile)]>
-<html class="ie8 ie6-8 no-js" lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie8 ie6-8 no-js" lang="en-US" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#"><![endif]-->
 <!--[if (gte IE 9)|(gt IEMobile 7)]><!-->
-<html class="no-js" lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#">
+<html class="no-js" lang="en-US" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#">
 	<!--<![endif]-->
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -112,8 +112,8 @@
 		<!--[if lt IE 7]>
 			<div class="general-msg general-msg_warning js-warning">
 				<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode" class="general-msg__inner">
-					Вы используете устаревшую версию браузера Internet Explorer. <br />
-					Выполните обновление для более быстрой и безопасной работы с веб-страницами.
+					This site does not fully support your browser!<br/>
+					You are using an outdated browser. For a faster, safer browsing experience,upgrade for free today.
 				</a>
 			</div>
 		<![endif]-->
@@ -126,7 +126,7 @@
 
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
-				$('.g-nav__ln').click(function(e) {
+				$('.g-nav__ln').on('click', function(e) {
 					e.preventDefault();
 
 					$('.g-nav__item').removeClass('g-nav__item_active');
@@ -137,25 +137,25 @@
 					aside1 = $('.region-aside_first'),
 					aside2 = $('.region-aside_second');
 				// 2 columns sidebar second
-				$('#twocolumn-s').click(function() {
+				$('#twocolumn-s').on('click', function() {
 					main.removeClass().addClass('region-main l-sidebar-second_main weiss-cf');
 					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-second_aside weiss-cf');
 					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-second_aside weiss-cf');
 				});
 				// 2 columns sidebar first
-				$('#twocolumn-f').click(function() {
+				$('#twocolumn-f').on('click', function() {
 					main.removeClass().addClass('region-main l-sidebar-first_main weiss-cf');
 					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-first_aside weiss-cf');
 					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-first_aside weiss-cf');
 				});
 				// 3 columns
-				$('#threecolumn').click(function() {
+				$('#threecolumn').on('click', function() {
 					main.removeClass().addClass('region-main l-2sidebars_main weiss-cf');
 					aside1.removeClass().addClass('region-aside region-aside_first l-2sidebars_sidebar-first weiss-cf');
 					aside2.removeClass().addClass('region-aside region-aside_second l-2sidebars_sidebar-second weiss-cf');
 				});
 				// no columns
-				$('#nocolumn').click(function() {
+				$('#nocolumn').on('click', function() {
 					main.removeClass().addClass('region-main weiss-cf');
 					aside1.removeClass().addClass('region-aside region-aside_first weiss-cf');
 					aside2.removeClass().addClass('region-aside region-aside_second weiss-cf');
