--- a/source/partials/additional/_block__btn.erb
+++ b/source/partials/additional/_block__btn.erb
@@ -1,4 +1,11 @@
-<h1>Составная кнопка</h1>
+<%#
+================================================================================
+	WEISS
+	Complex button
+--------------------------------------------------------------------------------
+	General purpose: support old browsers
+================================================================================
+%>
 
 <a href="#" class="btn-3el btn-3el_prim btn-3el_prim_green">
 	<i class="btn-3el__l-s"></i>
