--- a/source/partials/additional/_block__menu-horiz.erb
+++ b/source/partials/additional/_block__menu-horiz.erb
@@ -1,28 +1,35 @@
+<%#
+================================================================================
+	WEISS
+	Horizontal nav
+================================================================================
+%>
+
 <div class="g-nav">
 	<nav role="navigation">
 		<ul class="g-nav__inner">
 			<li class="g-nav__item">
-				<a href="#" class="g-nav__ln">Элемент_1</a>
+				<a href="#" class="g-nav__ln">Element_1</a>
 			</li>
 			<li class="g-nav__item">
-				<a href="#" class="g-nav__ln">Элемент_2</a>
+				<a href="#" class="g-nav__ln">Element_2</a>
 				<ul class="g-nav__submenu">
 					<li class="g-nav__submenu__item">
-						<a href="#" class="g-nav__submenu__ln">Суб-элемент_1</a>
+						<a href="#" class="g-nav__submenu__ln">Sub-Element_1</a>
 					</li>
 					<li class="g-nav__submenu__item">
-						<a href="#" class="g-nav__submenu__ln">Суб-элемент_2</a>
+						<a href="#" class="g-nav__submenu__ln">Sub-Element_2</a>
 					</li>
 				</ul>
 			</li>
 			<li class="g-nav__item">
-				<a href="#" class="g-nav__ln">Элемент_3</a>
+				<a href="#" class="g-nav__ln">Element_3</a>
 			</li>
 			<li class="g-nav__item g-nav__item_active">
-				<a href="#" class="g-nav__ln">Элемент_4</a>
+				<a href="#" class="g-nav__ln">Element_4</a>
 			</li>
 			<li class="g-nav__item g-nav__item_last">
-				<a href="#" class="g-nav__ln">Элемент_5</a>
+				<a href="#" class="g-nav__ln">Element_5</a>
 			</li>
 		</ul>
 	</nav>
